<resources>
    <string name="app_name">MemoList</string>
    <string name="memo_list_actitivy_title">MemoList</string>
    <string name="add">Add</string>
    <string name="edit_item">Edit item</string>
    <string name="new_item">New item</string>
    <string name="title">Title</string>
    <string name="hint_title_edit_text">What\'s this item for</string>
    <string name="description">Description</string>
    <string name="hint_description_edit_text">Describe this item better</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="hint_responsible_edit_text">Responsible name</string>
</resources>
